--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 </div>
             </div>
             <h1>Abhishek Shah</h1>
+            <h3>ML Engineer | Python Full-stack | AI | ML | NLP | LLMs</h3>
         </header>
 
         <div class="contact-info">
@@ -23,6 +24,7 @@
                 <p><i class="fas fa-phone"></i> +977(981) 587-3277</p>
                 <p><i class="fas fa-map-marker-alt"></i> Janakpur, Nepal</p>
             </div>
+            
             <div>
                 <p><a href="mailto:www.abhishekshah007@gmail.com"><img src="gmail-icon.png" alt="Email" style="width:20px; height:20px;"></a></p>
                 <p><a href="https://linkedin.com/in/abhiverse01"><img src="linkedin-icion.png" alt="LinkedIn" style="width:20px; height:20px;"></a></p>
