--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="section">
             <div class="section-title">Education</div>
             <div class="section-content education">
-                <p>Bachelor's of Computer Science - Tribhuvan University (2020 - 2024)</p>
+                <p>Bachelor's of Computer Science Engineering (CSE) - Tribhuvan University (2020 - 2024)</p>
                 <p>Relevant Coursework: Data Mining, Microprocessor, Object Oriented Programming and Design, Artificial Intelligence and Theory of Computation.</p>
                 <p>Secondary Education - Model Secondary School (2017 - 2019)</p>
             </div>
