--- a/index.html
+++ b/index.html
@@ -67,11 +67,23 @@
             <div class="section-title">Experience</div>
             <div class="section-content experience">
                 <div>
+                    <p><b>AIE - Artificial Intelligence Engineer & AI Team Lead </b> (Jun 2024 - Now)</p>
+                    <p>Inflancer Technology, Gwarko, Kathmandu, Nepal</p>
+                    <ul>
+                        <li><b>Recommender Systems:</b> Developed and deployed advanced Recommender Systems (RS) to boost user engagement through personalized content.</li>
+                        <li><b>Intelligent Search:</b> Implemented intelligent search features using NLP to enhance content discovery.</li>
+                        <li><b>End-to-End AI Solutions:</b> Led the development and deployment of scalable AI solutions on cloud platforms using Docker and Kubernetes.</li>
+                        <li><b>Cross-functional Collaboration:</b> Integrated AI features with business objectives, working closely with diverse teams.</li>
+                        <li><b>Technical Expertise:</b> Skilled in Python, Apache Kafka, MongoDB, LLMs, and Neural Networks for real-time systems.</li>
+                    </ul>
+                </div>
+                <hr>
+                <div>
                     <p><b>ML Researcher/Research Writer </b> (Jan 2019 - 2024)</p>
                     <p>Freelance, Dharan, Nepal</p>
                     <ul>
-                        <li>Researched and worked on the paper, "Nepali Music Genre Classification" to assist my mentor studying M.Sc abroad.</li>
-                        <li>Researched and worked on the paper, "Multi-modal Hate Speech Detection using Deep Learning" to assist my mentor studying M.Sc abroad.</li>
+                        <li>Researched and worked on the "Nepali Music Genre Classification" paper to assist my mentor in studying M.Sc abroad.</li>
+                        <li>Researched and worked on the "Multi-modal Hate Speech Detection using Deep Learning" paper to assist my mentor studying M.Sc. abroad.</li>
                     </ul>
                 </div>
                 <hr>
