--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="section-content skills">
                 <p><b>Technical Skills:</b></p>
                 <ul>
-                    <li>  Python, Javascript, AI/ML, NLP, Data Science, OpenCV, Deep Learning, Flask, SQL</li>
+                    <li>  Python, Javascript, AI/ML, NLP, Data Science, OpenCV, RecSys, Deep Learning, Flask, SQL, Docker, Kafka, System Design, Microservice Architectures</li>
                 </ul>
                 <p><b>Soft Skills:</b></p>
                 <ul>
