index: render html fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="header">
             <div class="cover-image">
                 <div class="profile-image">
-                    <img src="profile-placeholder.png" alt="Profile Image">
+                    <img src="assets/profile-placeholder.png" alt="Profile Image">
                 </div>
             </div>
             <h1>Abhishek Shah</h1>
@@ -27,10 +27,10 @@
             </div>
             
             <div>
-                <p><a href="mailto:www.abhishekshah007@gmail.com"><img src="gmail-icon.png" alt="Email" style="width:20px; height:20px;"></a></p>
-                <p><a href="https://linkedin.com/in/abhiverse01"><img src="linkedin-icion.png" alt="LinkedIn" style="width:20px; height:20px;"></a></p>
-                <p><a href="http://www.abhishekshah.vercel.app"><img src="portfolio-icon.png" alt="Portfolio" style="width:20px; height:20px;"></a></p>
-                <p><a href="https://www.facebook.com/1lord001"><img src="facebook-icon.png" alt="Facebook" style="width:20px; height:20px;"></a></p>
+                <p><a href="mailto:www.abhishekshah007@gmail.com"><img src="assets/gmail-icon.png" alt="Email" style="width:20px; height:20px;"></a></p>
+                <p><a href="https://linkedin.com/in/abhiverse01"><img src="assets/linkedin-icion.png" alt="LinkedIn" style="width:20px; height:20px;"></a></p>
+                <p><a href="http://www.abhishekshah.vercel.app"><img src="assets/portfolio-icon.png" alt="Portfolio" style="width:20px; height:20px;"></a></p>
+                <p><a href="https://www.facebook.com/1lord001"><img src="assets/facebook-icon.png" alt="Facebook" style="width:20px; height:20px;"></a></p>
             </div>
         </div>
 
