--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <h1>Abhishek Shah</h1>
-            <h3>ML Engineer | Python Full-stack | AI | ML | NLP | LLMs</h3>
+            <h3>ML Engineer - AIE | ML-Ops | python Stack | mongoDB | tableau | LLMs</h3>
         </header>
 
         <div class="contact-info">
@@ -27,10 +27,12 @@
             </div>
             
             <div>
-                <p><a href="mailto:www.abhishekshah007@gmail.com"><img src="assets/gmail-icon.png" alt="Email" style="width:20px; height:20px;"></a></p>
-                <p><a href="https://linkedin.com/in/abhiverse01"><img src="assets/linkedin-icion.png" alt="LinkedIn" style="width:20px; height:20px;"></a></p>
-                <p><a href="http://www.abhishekshah.vercel.app"><img src="assets/portfolio-icon.png" alt="Portfolio" style="width:20px; height:20px;"></a></p>
-                <p><a href="https://www.facebook.com/1lord001"><img src="assets/facebook-icon.png" alt="Facebook" style="width:20px; height:20px;"></a></p>
+                <p><a href="mailto:www.abhishekshah007@gmail.com"><img src="assets/gmail.png" alt="Email" style="width:30px; height:30px;"></a></p>
+                <p><a href="https://linkedin.com/in/abhiverse01"><img src="assets/linkedin-icion.png" alt="LinkedIn" style="width:30px; height:30px;"></a></p>
+                <p><a href="http://www.abhishekshah.vercel.app"><img src="assets/portfolio.png" alt="Portfolio" style="width:30px; height:30px;"></a></p>
+                <p><a href="https://www.facebook.com/1lord001"><img src="assets/facebook.gif" alt="Facebook" style="width:30px; height:30px;"></a></p>
+                <p><a href="https://www.github.com/abhiverse01"><img src="assets/github.gif" alt="GitHub" style="width:30px; height:30px;"></a></p>
+
             </div>
         </div>
 
