added instagram username

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <p><a href="http://www.abhishekshah.vercel.app"><img src="assets/portfolio.png" alt="Portfolio" style="width:30px; height:30px;"></a></p>
                 <p><a href="https://www.facebook.com/1lord001"><img src="assets/facebook.gif" alt="Facebook" style="width:30px; height:30px;"></a></p>
                 <p><a href="https://www.github.com/abhiverse01"><img src="assets/github.gif" alt="GitHub" style="width:30px; height:30px;"></a></p>
+                <p><a href="https://www.instagram.com/i_abhiverse"><img src="assets/instagram.gif" alt="Instagram" style="width:30px; height:30px;"></a></p>
 
             </div>
         </div>
