--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
             <div class="section-title">Extra-Curricular Activities</div>
             <div class="section-content extra-curricular">
                 <ul>
-                    <li>I actively write on <a href="https://medium.com/@abhiverse01"><b>medium</b></a> regarding tech and other topics. It is viewed and appreciated by over 1K+ readers per week. I like reading articles, finding out the new in tech, and trying out new technologies and LLMs that hit the HuggingFace library.</li>
+                    <li>I actively write on <a href="https://medium.com/@abhiverse01"><b>medium</b></a> regarding tech and other topics. It is viewed and appreciated by over 1k+ readers per week. I like reading articles, finding out the new in tech, and trying out new technologies and LLMs that hit the HuggingFace library.</li>
                     <li>Working on my very own GitHub repo titled "how-I-learned-python" and "how-I-learned-ml", to be put out as a one-stop guide and an effective resource for anyone trying to start learning Python, ML and Deep Learning Concepts.</li>
-                    <li>I even volunteered and managed the Deltathon which is a hackathon conducted every year by ACES in Eastern Regional Campus, TU.</li>
+                    <li>I even volunteered and managed the Deltathon, which is a hackathon conducted every year by ACES in Eastern Regional Campus, TU </li>
                     <li>After my time as a Volunteer, I even took part in the Deltathon the next year with my team, we were called team ”ZAV”.</li>
-                    <li>I learned a lot through competitive coding and exposure to greatly experienced individuals.</li>
-                    <li>I love trying to put out the ideas in my mind to physical shape, whether it be through code, sketches, rough drawings, idea-logs that I make etc.</li>
+                    <li>I learned a lot through competitive coding and exposure to highly experienced individuals.</li>
+                    <li>I love trying to put out the ideas in my mind to physical shape, whether it be through code, sketches, rough drawings, idea-logs that I make, etc.. </li>
                 </ul>
             </div>
         </div>
@@ -167,13 +167,13 @@
             <div class="section-title">Leadership</div>
             <div class="section-content leadership">
                 <ul>
-                    <li>I worked as the team leader for my college major project entitled "Project-codeBeing". I handled the model training, deployment, and backend. I also worked on ReactJs with my team members, since they were not much experienced. We successfully demonstrated our project in front of the Jury and received great reviews and possible improvements for the future.</li>
+                    <li>I was the team leader for my college major project, "Project-codeBeing". I handled the model training, deployment, and backend. I also worked on Reactjs with my team members, since they were not very experienced. We successfully demonstrated our project in front of the Jury and received great reviews and possible improvements for the future.</li>
                 </ul>
             </div>
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Abhishek Shah. All Rights Reserved.</p>
+        <p>&copy; 2025 | Abhishek Shah. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
