--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             
             <div>
                 <p><a href="mailto:www.abhishekshah007@gmail.com"><img src="assets/gmail.png" alt="Email" style="width:30px; height:30px;"></a></p>
-                <p><a href="https://linkedin.com/in/abhiverse01"><img src="assets/linkedin-icion.png" alt="LinkedIn" style="width:30px; height:30px;"></a></p>
+                <p><a href="https://linkedin.com/in/theabhishekshah"><img src="assets/linkedin-icion.png" alt="LinkedIn" style="width:30px; height:30px;"></a></p>
                 <p><a href="http://www.abhishekshah.vercel.app"><img src="assets/portfolio.png" alt="Portfolio" style="width:30px; height:30px;"></a></p>
                 <p><a href="https://www.facebook.com/1lord001"><img src="assets/facebook.gif" alt="Facebook" style="width:30px; height:30px;"></a></p>
                 <p><a href="https://www.github.com/abhiverse01"><img src="assets/github.gif" alt="GitHub" style="width:30px; height:30px;"></a></p>
